customers and brands row handler are now clickable and viewable

--- a/forms/customer_form.html
+++ b/forms/customer_form.html
@@ -7,7 +7,7 @@
 
 <body>
     <h1 id="pageHeader">รายชื่อลูกค้า</h1>
-    <form action="#">
+    <form id="form" action="#">
         <div class="row">
             <div class="detailInfo">
                 <table>
@@ -18,11 +18,11 @@
                             <input type="number" id="customerID" name="customerID" readonly>
                         </td>
                         <td>
-                            <input type="radio" id="customerType" name="customerType">
+                            <input type="radio" id="customerType1" name="customerType">
                             <label for="customerType">บุคคลธรรมดา</label>
                         </td>
                         <td>
-                            <input type="radio" id="customerType" name="customerType">
+                            <input type="radio" id="customerType2" name="customerType">
                             <label for="customerType">นิติบุคคล</label>
                         </td>
                     </tr>
