--- a/forms/service_partner_form.html
+++ b/forms/service_partner_form.html
@@ -7,7 +7,7 @@
 
 <body>
     <h1 id="pageHeader">รายชื่อศูนย์บริการ</h1>
-    <form action="#">
+    <form id="form" action="#">
         <div class="row">
             <div class="detailInfo">
                 <table>
@@ -18,11 +18,11 @@
                             <input type="number" id="partnerID" name="partnerID" readonly>
                         </td>
                         <td>
-                            <input type="radio" id="partnerType" name="partnerType">
+                            <input type="radio" id="partnerType1" name="partnerType">
                             <label for="partnerType">บุคคลธรรมดา</label>
                         </td>
                         <td>
-                            <input type="radio" id="partnerType" name="partnerType">
+                            <input type="radio" id="partnerType2" name="partnerType">
                             <label for="partnerType">นิติบุคคล</label>
                         </td>
                     </tr>
