Create condition readOnly when selected type

--- a/forms/customer_form.html
+++ b/forms/customer_form.html
@@ -18,11 +18,11 @@
                             <input type="number" id="customerID" name="customerID" readonly>
                         </td>
                         <td>
-                            <input type="radio" id="customerType1" name="customerType">
+                            <input type="radio" id="customerType1" name="customerType" value="1">
                             <label for="customerType">บุคคลธรรมดา</label>
                         </td>
                         <td>
-                            <input type="radio" id="customerType2" name="customerType">
+                            <input type="radio" id="customerType2" name="customerType" value="2">
                             <label for="customerType">นิติบุคคล</label>
                         </td>
                     </tr>
