--- a/forms/service_partner_form.html
+++ b/forms/service_partner_form.html
@@ -18,11 +18,11 @@
                             <input type="number" id="partnerID" name="partnerID" readonly>
                         </td>
                         <td>
-                            <input type="radio" id="partnerType1" name="partnerType">
+                            <input type="radio" id="partnerType1" name="partnerType" value="1">
                             <label for="partnerType">บุคคลธรรมดา</label>
                         </td>
                         <td>
-                            <input type="radio" id="partnerType2" name="partnerType">
+                            <input type="radio" id="partnerType2" name="partnerType" value="2">
                             <label for="partnerType">นิติบุคคล</label>
                         </td>
                     </tr>
