--- a/forms/supplier_form.html
+++ b/forms/supplier_form.html
@@ -18,11 +18,11 @@
                             <input type="number" id="supplierID" name="supplierID" readonly>
                         </td>
                         <td>
-                            <input type="radio" id="supplierType" name="supplierType">
+                            <input type="radio" id="supplierType1" name="supplierType" value="1">
                             <label for="supplierType">บุคคลธรรมดา</label>
                         </td>
                         <td>
-                            <input type="radio" id="supplierType" name="supplierType">
+                            <input type="radio" id="supplierType2" name="supplierType" value="2">
                             <label for="supplierType">นิติบุคคล</label>
                         </td>
                     </tr>
