add Thailand location filler by zipcode to all form

--- a/forms/staff_form.html
+++ b/forms/staff_form.html
@@ -54,19 +54,13 @@
                                         <input id="input_zipcode" class="zipcode-field" placeholder="รหัสไปรษณีย์" />
                                     </td>
                                     <td>
-                                        <select class="dropdown-field" id="input_province" onchange="showAmphoes()">
-                                            <option value="">กรุณาเลือกจังหวัด</option>
-                                        </select>
+                                        <input class="dropdown-field" id="input_province" placeholder="จังหวัด" />
                                     </td>
                                     <td>
-                                        <select class="dropdown-field" id="input_amphoe" onchange="showDistricts()">
-                                            <option value="">กรุณาเลือกอำเภอ</option>
-                                        </select>
+                                        <input class="dropdown-field" id="input_amphoe" placeholder="อำเภอ/เขต" />
                                     </td>
                                     <td>
-                                        <select class="dropdown-field" id="input_district" onchange="showZipcode()">
-                                            <option value="">กรุณาเลือกตำบล</option>
-                                        </select>
+                                        <input class="dropdown-field" id="input_district" placeholder="ตำบล/แขวง" />
                                     </td>
                                 </tr>
                             </table>
