--- a/home.html
+++ b/home.html
@@ -374,5 +374,10 @@
 </body>
 <link rel="stylesheet" type="text/css" href="node_modules/jquery-datetimepicker/jquery.datetimepicker.css" />
 <script src="node_modules/jquery-datetimepicker/build/jquery.datetimepicker.full.min.js"></script>
+<script type="text/javascript" src="node_modules/jthailand/jquery.Thailand.js/dependencies/JQL.min.js"></script>
+<script type="text/javascript"
+    src="node_modules/jthailand/jquery.Thailand.js/dependencies/typeahead.bundle.js"></script>
+<link rel="stylesheet" href="node_modules/jthailand/jquery.Thailand.js/dist/jquery.Thailand.min.css">
+<script type="text/javascript" src="node_modules/jthailand/jquery.Thailand.js/dist/jquery.Thailand.min.js"></script>
 
 </html>
