make onchange staffName by id

--- a/forms/delivery_form.html
+++ b/forms/delivery_form.html
@@ -27,14 +27,14 @@
                         <tr>
                             <td>รหัสพนักงาน</td>
                             <td>
-                                <input type="number" id="staffID" name="staffID">
+                                <input type="number" id="staffID1" name="staffID1">
                             </td>
                         </tr>
                         <tr>
                             <!-- display only -->
                             <td>ชื่อพนักงาน</td>
                             <td>
-                                <input type="text" id="staffName" name="staffName" readonly>
+                                <input type="text" id="staffName1" name="staffName1" readonly>
                             </td>
                         </tr>
                         <tr>
@@ -85,14 +85,14 @@
                         <tr>
                             <td>รหัสพนักงาน</td>
                             <td>
-                                <input type="number" id="staffID" name="staffID">
+                                <input type="number" id="staffID2" name="staffID2">
                             </td>
                         </tr>
                         <tr>
                             <!-- display only -->
                             <td>ชื่อพนักงาน</td>
                             <td>
-                                <input type="text" id="staffName" name="staffName" readonly>
+                                <input type="text" id="staffName2" name="staffName2" readonly>
                             </td>
                         </tr>
                     </table>
