--- a/forms/repairing_form.html
+++ b/forms/repairing_form.html
@@ -79,14 +79,14 @@
                         <tr>
                             <td>รหัสพนักงาน</td>
                             <td>
-                                <input type="number" id="staffID" name="staffID">
+                                <input type="number" id="staffID1" name="staffID1">
                             </td>
                         </tr>
                         <tr>
                             <!-- display only -->
                             <td>ชื่อพนักงาน</td>
                             <td>
-                                <input type="text" id="staffName" name="staffName" readonly>
+                                <input type="text" id="staffName1" name="staffName1" readonly>
                             </td>
                         </tr>
                     </table>
@@ -134,22 +134,22 @@
                     <tr>
                         <td>รหัสพนักงาน</td>
                         <td>
-                            <input type="number" id="staffID" name="staffID">
+                            <input type="number" id="staffID2" name="staffID2">
                         </td>
                         <td>รหัสพนักงาน</td>
                         <td>
-                            <input type="number" id="staffID" name="staffID">
+                            <input type="number" id="staffID3" name="staffID3">
                         </td>
                     </tr>
                     <tr>
                         <!-- display only -->
                         <td>ชื่อพนักงาน</td>
                         <td>
-                            <input type="text" id="staffName" name="staffName" readonly>
+                            <input type="text" id="staffName2" name="staffName2" readonly>
                         </td>
                         <td>ชื่อพนักงาน</td>
                         <td>
-                            <input type="text" id="staffName" name="staffName" readonly>
+                            <input type="text" id="staffName3" name="staffName3" readonly>
                         </td>
                     </tr>
                 </table>
