Create event on install type radio button

--- a/forms/installation_wh_form.html
+++ b/forms/installation_wh_form.html
@@ -13,11 +13,11 @@
                 <table>
                     <tr>
                         <td>
-                            <input type="radio" id="installType" name="installType" value="whSet">
+                            <input type="radio" id="installTypeSet" name="installType" value="set">
                             <label for="installType">ติดตั้งใหม่</label>
                         </td>
                         <td>
-                            <input type="radio" id="installType" name="installType" value="whFix">
+                            <input type="radio" id="installTypeFix" name="installType" value="fix">
                             <label for="installType">แก้ไขและซ่อมแซม</label>
                         </td>
                     </tr>
@@ -25,7 +25,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="ref-id">
+            <div class="ref-job" id="refJob">
                 <table>
                     <tr>
                         <td>
