--- a/forms/installation_ac_form.html
+++ b/forms/installation_ac_form.html
@@ -13,15 +13,15 @@
                 <table>
                     <tr>
                         <td>
-                            <input type="radio" id="installType" name="installType" value="acSet">
+                            <input type="radio" id="installTypeSet" name="installType" value="set">
                             <label for="installType">ติดตั้งใหม่</label>
                         </td>
                         <td>
-                            <input type="radio" id="installType" name="installType" value="acFix">
+                            <input type="radio" id="installTypeFix" name="installType" value="fix">
                             <label for="installType">แก้ไขและซ่อมแซม</label>
                         </td>
                         <td>
-                            <input type="radio" id="installType" name="installType" value="acClean">
+                            <input type="radio" id="installTypeClean" name="installType" value="clean">
                             <label for="installType">ล้างแอร์</label>
                         </td>
                     </tr>
@@ -29,7 +29,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="ref-id">
+            <div class="ref-job" id="refJob">
                 <table>
                     <tr>
                         <td>
