--- a/forms/installation_sat_form.html
+++ b/forms/installation_sat_form.html
@@ -14,15 +14,15 @@
                     <table>
                         <tr>
                             <td>
-                                <input type="radio" id="installType" name="installType" value="satSet">
+                                <input type="radio" id="installTypeSet" name="installType" value="set">
                                 <label for="installType">ติดตั้งใหม่</label>
                             </td>
                             <td>
-                                <input type="radio" id="installType" name="installType" value="satFix">
+                                <input type="radio" id="installTypeFix" name="installType" value="fix">
                                 <label for="installType">แก้ไขและซ่อมแซม</label>
                             </td>
                             <td>
-                                <input type="radio" id="installType" name="installType" value="satAddOn">
+                                <input type="radio" id="installTypeAddOn" name="installType" value="addOn">
                                 <label for="installType">เพิ่มจุดรับสัญญาณ</label>
                             </td>
                         </tr>
@@ -30,7 +30,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="ref-id">
+                <div class="ref-job" id="refJob">
                     <table>
                         <tr>
                             <td>
